grammatical correction cover letter

--- a/cover.html
+++ b/cover.html
@@ -44,26 +44,22 @@
 
         <p>Dear Recruiter,</p>
 
-        <p>I am writing to express my keen interest in the available job opportunity at your company. In
-            over 10 years of professional IT experience, I have successfully delivered enterprise-grade
-            applications, microservices and libraries, including tests, instrumentation and monitoring in
-            production. My expertise lies in ensuring scalability, reliability, and availability in all projects I
-            undertake.</p>
+        <p>I am writing to express my keen interest in the available job opportunity at your company. In over 10 years
+            of professional IT experience, I have successfully delivered enterprise-grade applications, microservices,
+            and libraries, including tests, instrumentation, and monitoring in production. My expertise lies in ensuring
+            scalability, reliability, and availability in all projects I undertake.</p>
 
-        <p>I am hands-on in Golang, Kubernetes, Docker, CI/CD setup, deployments, Kafka,
-            Prometheus, Grafana, and well-versed with data structures and system design. At Walmart,
-            I am responsible for designing and implementing SRE solutions, including autoscaling and
-            anomaly detection systems, K8s operators, showback services, onboarding APIs, and
-            Prometheus exporters. During my tenure at ThoughtWorks, I developed cloud-based
-            enterprise web applications and data pipelines using a wide range of technologies,
-            including Golang, C#, React-JS, Kafka, Docker, Kubernetes, Git, OAuth, CI/CD, REST APIs,
-            and microservices.
+        <p>I am hands-on in Golang, Kubernetes, Docker, CI/CD setup, deployments, Kafka, Prometheus, and Grafana, and
+            well-versed in data structures and system design. At Walmart, I am responsible for designing and
+            implementing SRE solutions, including autoscaling and anomaly detection systems, K8s operators, showback
+            services, onboarding APIs, and Prometheus exporters. During my tenure at ThoughtWorks, I developed
+            cloud-based enterprise web applications and data pipelines using a wide range of technologies, including
+            Golang, C#, React-JS, Kafka, Docker, Kubernetes, Git, OAuth, CI/CD, REST APIs, and microservices.
         </p>
 
-        <p>I thrive in an environment that values inclusivity, diversity, creativity, sustainability, and
-            collaboration. As an empathetic intellectual and first principle thinker, I am dedicated to
-            delivering high-quality work and making a valuable contribution to the team's goals and
-            milestones.</p>
+        <p>I thrive in an environment that values inclusivity, diversity, creativity, sustainability, and collaboration.
+            As an empathetic intellectual and first principle thinker, I am dedicated to delivering high-quality work
+            and making a valuable contribution to the team's goals and milestones.</p>
 
         <p>I would welcome the opportunity to discuss the role further and how I can contribute to
             your organization's success</p>
