update about me section

--- a/index.html
+++ b/index.html
@@ -102,12 +102,13 @@
             <div class="right-column">
                 <div class="section section-about">
                     <h1 class="section-title">About <i class="fas fa-user"></i></h1>
-                    <p>With a decade of Professional work experience, I'm skilled in developing reliable & scalable
-                        distributed backend systems.
-                        I've inherent zeal for quality. I thrive in an environment that has high regard for inclusivity,
-                        diversity,
-                        creativity, sustainability, and collaboration. I love to be among empathetic intellectuals &
-                        first-principle thinkers.
+                    <p>
+                        - Experienced software engineer skilled in developing scalable & reliable distributed systems,
+                        and
+                        setting up project structure, monitoring, CI/CD, and DevOps.</li>
+                        <br /> - Strong background in architecting enterprise services, data pipelines, and SRE.</li>
+                        <br /> - Lead tech teams and played agile coach, and scrum master.
+                        <br />- Passionate about quality, inclusivity, diversity, and sustainability.
                     </p>
                 </div>
 
