--- a/index.html
+++ b/index.html
@@ -196,8 +196,7 @@
                                 <li>Did feature development for SDN product - Blueplanet for clients: AT&T, Facebook
                                     (USA)</li>
                                 <li>Significant contribution towards feature implementation, Rest API Development,
-                                    refactoring and
-                                    bug fixing in a domain heavy context.</li>
+                                    refactoring and bug fixing in a domain heavy context.</li>
                                 <li>Project: Blue Planet is a container-based microservices software architecture that
                                     enables true end-to-end service orchestration and SDN software suite for optical
                                     networks.</li>
@@ -221,12 +220,7 @@
                                     asynchronous processing of business logic, using AOP, DI, and Lazy evaluation.</li>
                                 <li>Took complete ownership of the application middle layer in a startup environment
                                     with Operation Research Scholars.</li>
-                                <li>Project: HaulPLAN (Clients: FedEx, ABF, SAIA, YRCF - USA): HaulPLAN is
-                                    a service for less-than-truckload shipping (LTL) carriers to create
-                                    plans and optimize network operations. The system can be used by linehaul planners,
-                                    network
-                                    planners, and central dispatchers to create better linehaul schedules and shipment
-                                    routes.</li>
+                                <li>Moved business logic from DB Layer (PL/SQL) to the service, improving performance and maintainability.</li>
                             </ul>
                         </div>
                     </div>
