update cover letter and pdf resume

--- a/cover.html
+++ b/cover.html
@@ -4,9 +4,9 @@
 <head>
     <title>Vikas Kaushik - Experienced Software Engineer</title>
     <meta name="description"
-        content="Vikas Kaushik, an experienced software engineer with over 10 years of experience, proficient in Golang, Kafka, Docker, Kubernetes, Git and more. Looking for innovative challenges.">
+        content="Vikas Kaushik, an experienced software engineer with over 10 years of experience, proficient in Golang, Kafka, Docker, Kubernetes, Git, SRE and DevOps. Looking for innovative challenges.">
     <meta name="keywords"
-        content="Vikas Kaushik, Software Developer, Software Engineer, Golang, Kafka, Docker, Kubernetes, Git, Experienced Developer">
+        content="Vikas Kaushik, Software Developer, Software Engineer, Golang, Kafka, Docker, Kubernetes, Git, Experienced Developer, Backend Software Developer, SRE">
     <meta name="author" content="Vikas Kaushik">
     <style>
         body {
@@ -42,31 +42,37 @@
     <div class="letter">
         <h3>Cover Letter</h3>
 
-        <p>Dear Recruiter,</p>
+        Hi,
+        <p>I am writing to express my keen interest in the available job opportunity at your company. I’ve 10+ years of professional IT experience. I have successfully delivered enterprise-grade microservices, data-pipelines and APIs in a distributed multi-cloud environment with high scalability, reliability and availability requirements. I’ve set up projects from scratch, including project structure, unit tests, monitoring, CI/CD. I’m skilled in using Golang, Kubernetes, Docker, Kafka, Prometheus, Grafana, SRE, system design and data-structures.</p>
+        <p>In my present role at Walmart, I’m a Sr. Software Engineer, in the SRE team where I architect and implement solutions that help product teams to monitor and set up alerts for their services, improving MTTD and MTTR in prod. During my tenure at ThoughtWorks, I led projects starting from inception, release planning and delivery with agile practices. I’ve been a backend software developer for the most part of my career. I value inclusivity, diversity, creativity and collaboration and I love to be among empathetic intellectuals.</p>
+        <p>I’m looking forward to knowing more about this opportunity.</p>
 
-        <p>I am writing to express my keen interest in the available job opportunity at your company. In over 10 years
-            of professional IT experience, I have successfully delivered enterprise-grade applications, microservices,
-            and libraries, including tests, instrumentation, and monitoring in production. My expertise lies in ensuring
-            scalability, reliability, and availability in all projects I undertake.</p>
-
-        <p>I am hands-on in Golang, Kubernetes, Docker, CI/CD setup, deployments, Kafka, Prometheus, and Grafana, and
-            well-versed in data structures and system design. At Walmart, I am responsible for designing and
-            implementing SRE solutions, including autoscaling and anomaly detection systems, K8s operators, showback
-            services, onboarding APIs, and Prometheus exporters. During my tenure at ThoughtWorks, I developed
-            cloud-based enterprise web applications and data pipelines using a wide range of technologies, including
-            Golang, C#, React-JS, Kafka, Docker, Kubernetes, Git, OAuth, CI/CD, REST APIs, and microservices.
-        </p>
-
-        <p>I thrive in an environment that values inclusivity, diversity, creativity, sustainability, and collaboration.
-            As an empathetic intellectual and first principle thinker, I am dedicated to delivering high-quality work
-            and making a valuable contribution to the team's goals and milestones.</p>
-
-        <p>I would welcome the opportunity to discuss the role further and how I can contribute to
-            your organization's success</p>
-
+        <br />
         <p>Sincerely,<br />
             Vikas Kaushik</p>
     </div>
 </body>
 
 </html>
+
+
+
+<!-- <p>I am writing to express my keen interest in the available job opportunity at your company. In over 10 years
+    of professional IT experience, I have successfully delivered enterprise-grade applications, microservices,
+    and libraries, including tests, instrumentation, and monitoring in production. My expertise lies in ensuring
+    scalability, reliability, and availability in all projects I undertake.</p>
+
+<p>I am hands-on in Golang, Kubernetes, Docker, CI/CD setup, deployments, Kafka, Prometheus, and Grafana, and
+    well-versed in data structures and system design. At Walmart, I am responsible for designing and
+    implementing SRE solutions, including autoscaling and anomaly detection systems, K8s operators, showback
+    services, onboarding APIs, and Prometheus exporters. During my tenure at ThoughtWorks, I developed
+    cloud-based enterprise web applications and data pipelines using a wide range of technologies, including
+    Golang, C#, React-JS, Kafka, Docker, Kubernetes, Git, OAuth, CI/CD, REST APIs, and microservices.
+</p>
+
+<p>I thrive in an environment that values inclusivity, diversity, creativity, sustainability, and collaboration.
+    As an empathetic intellectual and first principle thinker, I am dedicated to delivering high-quality work
+    and making a valuable contribution to the team's goals and milestones.</p>
+
+<p>I would welcome the opportunity to discuss the role further and how I can contribute to
+    your organization's success</p> -->
