--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
                                 <li><b>Tech-stack:</b> Golang, Kubernetes, Docker, Kafka, SRE, DevOps, Prometheus,
                                     Grafana, M3, K8s operators, Multi-cloud, DR, GCP.</li>
                                 <li>Designed and implemented anomaly-detection services for AIDR (AI-based Incident
-                                    Detection and Recovery),
-                                    serving hundreds of clients for real-time anomaly detection.</li>
+                                    Detection and Recovery), serving hundreds of clients for real-time anomaly detection with reduced noise alerts.</li>
                                 <li>Developed a showback system to represent the telemetry platform usage by different
                                     teams in terms of dollar cost. This reduced platform abuse by ~20%.</li>
                                 <li>Enhanced and maintained critical parts of telemetry services that ingest and store
@@ -347,11 +346,6 @@
             <span class="footer-link">
                 <a href="./resume-vikas-kaushik.pdf" class="no-external-icon">
                     <span>PDF Resume </span>
-                </a>
-            </span>
-            <span class="footer-link">
-                <a href="./cover.pdf" class="no-external-icon">
-                    <span>PDF Cover-Letter </span>
                 </a>
             </span>
         </span>
