tech lead oriented resume

--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
                             <ul>
                                 <li><b>Tech-stack:</b> Golang, Kubernetes, Docker, Kafka, SRE, DevOps, Prometheus,
                                     Grafana, M3, K8s operators, Multi-cloud, DR, GCP.</li>
-                                <li>Designed and implemented anomaly-detection services for AIDR (AI-based Incident
+                                <li>Led tech team to design and deliver anomaly-detection services for AIDR (AI-based Incident
                                     Detection and Recovery), serving hundreds of clients for real-time anomaly detection with reduced noise alerts.</li>
+                                <li>Sprint planning, effective collaboration between cross-functional teams, monitoring and aligning the sprint deliveries,
+                                    retrospection and incorporating feedback.</li>
                                 <li>Developed a showback system to represent the telemetry platform usage by different
                                     teams in terms of dollar cost. This reduced platform abuse by ~20%.</li>
                                 <li>Enhanced and maintained critical parts of telemetry services that ingest and store
@@ -76,13 +78,13 @@
                             <ul>
                                 <li><b>Tech-stack:</b> Golang, Kubernetes, Kafka, Kafka-Streams, Java-Spring-Webflux,
                                     React-Redux, Oauth, Ansible, Jenkins, CI/CD, Git. </li>
+                                <li>Engaged as the Tech-lead for the clients: Tesco (UK) and IDFC from ThoughtWorks and
+                                    led these fast-paced projects from inception stage to successful delivery.</li>
                                 <li>Designed and developed a scalable ETL data pipeline using an event-driven
                                     architecture that
                                     processed and aggregated more than 2 million invoices per hour.</li>
                                 <li>Implemented flawless user migration services that handled over 20k
                                     distributed Tx (saga) per hour.</li>
-                                <li>Engaged as the Tech-lead for the clients: Tesco (UK) and IDFC from ThoughtWorks and
-                                    led these fast-paced projects from inception stage to successful delivery.</li>
                                 <li>Implemented responsive UI with Internationalisation support using React-redux,
                                     Material UI, and Jest.</li>
                                 <li>Delivered training sessions to upskill new hire batches for agile practices,
@@ -102,12 +104,10 @@
                 <div class="section section-about">
                     <h1 class="section-title">About <i class="fas fa-user"></i></h1>
                     <p>
-                        - Experienced software engineer skilled in developing scalable & reliable distributed systems,
-                        and
-                        setting up project structure, monitoring, CI/CD, and DevOps.</li>
-                        <br /> - Strong background in architecting enterprise services, data pipelines, and SRE.</li>
+                         - Strong background in architecting enterprise services, data pipelines, and SRE.</li>
                         <br /> - Lead tech teams and played agile coach, and scrum master.
-                        <br />- Passionate about quality, inclusivity, diversity, and sustainability.
+                        <br /> - Skilled in developing scalable & reliable distributed systems, and setting up project structure, monitoring, CI/CD, and DevOps.</li>
+                        <br /> - Passionate about quality, inclusivity, diversity, and sustainability.
                     </p>
                 </div>
 
@@ -117,6 +117,10 @@
                         <dl>
                             <dt>Keywords</dt>
                             <dd>
+                                <span>Agile</span>
+                                <span>Sprint Grooming</span>
+                                <span>Release planning</span>
+                                <span>Delivery</span>
                                 <span>Golang</span>
                                 <span>C#</span>
                                 <span>Kubernetes</span>
@@ -127,7 +131,6 @@
                                 <span>Kafka</span>
                                 <span>Grafana</span>
                                 <br />
-                                <span>OAuth</span>
                                 <span>Linux</span>
                                 <span>SQL</span>
                                 <span>Git</span>
@@ -146,7 +149,6 @@
                                 <span>DevOps</span>
                                 <span>Clean Code</span>
                                 <span>Clean Architecture</span>
-                                <span>Agile</span>
                                 <span>TDD</span>
                                 <span>Saga</span>
                                 <span>Rest APIs</span>
