update last experience

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <div class="item">
                             <div class="flex-row">
                                 <span class="job-title">SDE-IV</span>
-                                <span class="date"><i class="fas fa-calendar"></i> June 2021 - Present</span>
+                                <span class="date"><i class="fas fa-calendar"></i> June 2021 - Sep 2023</span>
                                 <span class="job-title"><i class="fas fa-map-marker-alt"></i> Bengaluru, India</span>
                             </div>
                             <ul>
