--- a/index.html
+++ b/index.html
@@ -43,6 +43,21 @@
                 <div class="section section-experience">
                     <h1 class="section-title">Experience</h1>
                     <div class="item group">
+                        <h2 class="item-title">EPAM</h2>
+                        <div class="item">
+                            <div class="flex-row">
+                                <span class="job-title">Lead Software Engineer</span>
+                                <span class="date"><i class="fas fa-calendar"></i> Sep 2023 - Present</span>
+                                <span class="job-title"><i class="fas fa-map-marker-alt"></i> Bengaluru, India</span>
+                            </div>
+                            <ul>
+                                <li><b>Tech-stack:</b> Golang, Kubernetes, Docker, Helm, gRPC</li>
+                                <li>Developin DDI suite services and APIs for a niche client with high scalability and availability requirements.</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <br />                    
+                    <div class="item group">
                         <h2 class="item-title">Walmart</h2>
                         <div class="item">
                             <div class="flex-row">
