--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
                                 <span class="job-title"><i class="fas fa-map-marker-alt"></i> Bengaluru, India</span>
                             </div>
                             <ul>
-                                <li><b>Tech-stack:</b> Golang, Kubernetes, Docker, Helm, gRPC</li>
+                                <li><b>Tech-stack:</b> Golang, Kubernetes, Docker, Helm, gRPC, Prometheus, Grafana, Postgres</li>
                                 <li>Developin DDI suite services and APIs for a niche client with high scalability and availability requirements.</li>
+                                <li>Design and develop data discovery pipelines for Asset Insights and Visiblity.</li>
+                                <li>Mentor, onboard and lead EPAM teams towards engineering excellence.</li>
                             </ul>
                         </div>
                     </div>
