--- a/cover.html
+++ b/cover.html
@@ -4,9 +4,9 @@
 <head>
     <title>Vikas Kaushik - Experienced Software Engineer</title>
     <meta name="description"
-        content="Vikas Kaushik, an experienced software engineer with over 10 years of experience, proficient in Golang, Kafka, Docker, Kubernetes, Git, SRE and DevOps. Looking for innovative challenges.">
+        content="Vikas Kaushik, an experienced software engineer with over 10 years of experience, proficient in Golang, Kafka, Docker, Kubernetes, Git, SRE, DevOps, and AI tools. Looking for innovative challenges.">
     <meta name="keywords"
-        content="Vikas Kaushik, Software Developer, Software Engineer, Golang, Kafka, Docker, Kubernetes, Git, Experienced Developer, Backend Software Developer, SRE">
+        content="Vikas Kaushik, Software Developer, Software Engineer, Golang, Kafka, Docker, Kubernetes, Git, AI, LLM, Copilot, Backend Software Developer, SRE, Experienced Developer, DevOps, Microservices, Data Pipelines, APIs, Multi-cloud, System Design, Data Structures">
     <meta name="author" content="Vikas Kaushik">
     <style>
         body {
@@ -43,10 +43,10 @@
         <h3>Cover Letter</h3>
 
         Hi,
-        <p>I am writing to express my keen interest in the available job opportunity at your company. I’ve 10+ years of professional IT experience. I have successfully delivered enterprise-grade microservices, data-pipelines and APIs in a distributed multi-cloud environment with high scalability, reliability and availability requirements. I’ve set up projects from scratch, including project structure, unit tests, monitoring, CI/CD. I’m skilled in using Golang, Kubernetes, Docker, Kafka, Prometheus, Grafana, SRE, system design and data-structures.</p>
-        <p>In my present role at Walmart, I’m a Sr. Software Engineer, in the SRE team where I architect and implement solutions that help product teams to monitor and set up alerts for their services, improving MTTD and MTTR in prod. During my tenure at ThoughtWorks, I led projects starting from inception, release planning and delivery with agile practices. I’ve been a backend software developer for the most part of my career. I value inclusivity, diversity, creativity and collaboration and I love to be among empathetic intellectuals.</p>
-        <p>I’m looking forward to knowing more about this opportunity.</p>
-
+        <p>I am excited to express my interest in the available opportunity at your esteemed company. With over 11 years of professional IT experience, I have consistently delivered enterprise-grade microservices, data pipelines, and APIs in distributed, multi-cloud environments with high scalability, reliability, and availability requirements. I have set up projects from scratch, including architecture, monitoring, tests, and CI/CD, and am skilled in Golang, Kubernetes, Docker, Kafka, Prometheus, Grafana, SRE, System Design, and Data Structures.</p>
+        <p>In my current role at EPAM as a Lead Software Engineer, I have been recognized with the prestigious <b>Impact Award</b> for extraordinary contributions to technology and business. I am also an advocate for leveraging modern AI tools such as GitHub Copilot, ChatGPT, Claude, and have built and used MCP agents to accelerate development, improve code quality, and drive innovation within my teams.</p>
+        <p>Previously, at Walmart, I architected and implemented solutions that empowered product teams to monitor and set up alerts for their services, significantly improving MTTD and MTTR in production. At ThoughtWorks, I led projects from inception to delivery, championing agile practices and fostering a culture of inclusivity, creativity, and collaboration.</p>
+        <p>I am passionate about adopting new technologies, building high-performing teams, and creating a positive impact. I look forward to learning more about this opportunity and how I can contribute to your organization’s success.</p>
         <br />
         <p>Sincerely,<br />
             Vikas Kaushik</p>
