--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="description"
-        content="Vikas Kaushik, an experienced software engineer with over 10 years of experience, proficient in Golang, Kafka, Docker, Kubernetes, Git and more. Looking for innovative challenges.">
+        content="Vikas Kaushik, an experienced software engineer with over 11 years of experience, proficient in Golang, Kafka, Docker, Kubernetes, Git and more. Looking for innovative challenges.">
     <meta name="keywords"
-        content="Vikas Kaushik, Software Developer, Software Engineer, Golang, Kafka, Docker, Kubernetes, Git, Experienced Developer">
+        content="Vikas Kaushik, Software Developer, Software Engineer, Golang, Kafka, Docker, Kubernetes, Git, Experienced Developer, LLM, Copilot, SRE, AI, ML, MCP, AI Agents, Backend Software Developer, DevOps, Microservices, Data Pipelines, APIs, Multi-cloud, System Design, Data Structures, Lead Software Engineer, Engineering Excellence, AI Tools, Anomaly Detection, Incident Management">
     <meta name="author" content="Vikas Kaushik">
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -24,7 +24,7 @@
             <header class="flex-row">
                 <div class="title">
                     <h1 class="name">Vikas Kaushik</h1>
-                    <h2 class="tagline">Senior Software Engineer | <i class="fas fa-briefcase"></i> 10+ Years</h2>
+                    <h2 class="tagline">Lead Software Engineer | <i class="fas fa-briefcase"></i> 11+ Years</h2>
                     <span class="contact">
                         <i class="fas fa-phone-square-alt"></i> +91-8699339558 | <a href="mailto:kaushik2272@gmail.com"
                             class="no-external-icon">
@@ -48,13 +48,14 @@
                             <div class="flex-row">
                                 <span class="job-title">Lead Software Engineer</span>
                                 <span class="date"><i class="fas fa-calendar"></i> Sep 2023 - Present</span>
-                                <span class="job-title"><i class="fas fa-map-marker-alt"></i> Bengaluru, India</span>
+                                <span class="job-title"><i class="fas fa-map-marker-alt"></i> Gurugram, India</span>
                             </div>
                             <ul>
-                                <li><b>Tech-stack:</b> Golang, Kubernetes, Docker, Helm, gRPC, Prometheus, Grafana, Postgres</li>
-                                <li>Developin DDI suite services and APIs for a niche client with high scalability and availability requirements.</li>
-                                <li>Design and develop data discovery pipelines for Asset Insights and Visiblity.</li>
+                                <li><b>Tech-stack:</b> Golang, Kubernetes, Docker, Helm, gRPC, Prometheus, Grafana, Postgres, GitHub Copilot, ChatGPT, Claude, MCP Agent</li>
+                                <li>Developing DDI suite services and APIs for niche clients with high scalability and availability requirements.</li>
+                                <li>Design and develop data discovery pipelines for Asset Insights and Visibility.</li>
                                 <li>Mentor, onboard and lead EPAM teams towards engineering excellence.</li>
+                                <li>Leveraged AI/LLM tools (Copilot, ChatGPT, Claude) to accelerate development, improve code quality, and foster innovation within the team.</li>
                             </ul>
                         </div>
                     </div>
@@ -100,13 +101,13 @@
                                     distributed Tx (saga) per hour.</li>
                                 <li>Engaged as the Tech-lead for the clients: Tesco (UK) and IDFC from ThoughtWorks and
                                     led these fast-paced projects from inception stage to successful delivery.</li>
-                                <li>Implemented responsive UI with Internationalisation support using React-redux,
+                                <!-- <li>Implemented responsive UI with Internationalisation support using React-redux,
                                     Material UI, and Jest.</li>
                                 <li>Delivered training sessions to upskill new hire batches for agile practices,
                                     ways-of-working, and ThoughtWorks culture. Driven lunch & learn sessions and design
                                     thinking
                                     workshops for colleagues.
-                                </li>
+                                </li> -->
                             </ul>
                         </div>
                     </div>
@@ -119,12 +120,10 @@
                 <div class="section section-about">
                     <h1 class="section-title">About <i class="fas fa-user"></i></h1>
                     <p>
-                        - Experienced software engineer skilled in developing scalable & reliable distributed systems,
-                        and
-                        setting up project structure, monitoring, CI/CD, and DevOps.</li>
-                        <br /> - Strong background in architecting enterprise services, data pipelines, and SRE.</li>
-                        <br /> - Lead tech teams and played agile coach, and scrum master.
-                        <br />- Passionate about quality, inclusivity, diversity, and sustainability.
+                        - Experienced software engineer skilled in developing scalable & reliable distributed systems, setting up project structure, monitoring, CI/CD, and DevOps.<br />
+                        - Strong background in architecting enterprise services, data pipelines, SRE, and leading adoption of AI/LLM tools (GitHub Copilot, ChatGPT, Claude, MCP agents) to drive innovation and productivity.<br />
+                        - Lead tech teams, played agile coach, and scrum master.<br />
+                        - Passionate about quality, inclusivity, diversity, and sustainability.
                     </p>
                 </div>
 
@@ -137,18 +136,20 @@
                                 <span>Golang</span>
                                 <span>C#</span>
                                 <span>Kubernetes</span>
-                                <br />
                                 <span>Prometheus</span>
                                 <span>K8s Operator</span>
                                 <span>Docker</span>
                                 <span>Kafka</span>
                                 <span>Grafana</span>
-                                <br />
                                 <span>OAuth</span>
                                 <span>Linux</span>
                                 <span>SQL</span>
                                 <span>Git</span>
                                 <span>SRE</span>
+                                <span>GitHub Copilot</span>
+                                <span>ChatGPT</span>
+                                <span>Claude</span>
+                                <span>MCP Agent</span>
                             </dd>
                             <dt>Software Engg.</dt>
                             <dd>
@@ -167,11 +168,18 @@
                                 <span>TDD</span>
                                 <span>Saga</span>
                                 <span>Rest APIs</span>
-
                             </dd>
                         </dl>
                     </div>
                 </div>
+
+                <!-- <div class="section section-achievements">
+                    <h1 class="section-title">Key Achievements <i class="fas fa-trophy"></i></h1>
+                    <div class="item">
+                        <h2 class="item-title">Impact Award, EPAM (2025)</h2>
+                        <span>The Impact Award is an annual recognition initiative at EPAM designed to honor employees who have made extraordinary contributions to clients, technology, business, or colleagues. Recipients of this award exhibit key traits and values that are highly regarded by EPAM.</span>
+                    </div>
+                </div> -->
 
                 <div class="section section-education">
                     <h1 class="section-title">Education <i class="fas fa-graduation-cap"></i></h1>
@@ -200,6 +208,17 @@
                 <div class="section section-experience">
                     <h1 class="section-title">Experience</h1>
                     <div class="item group">
+                        <div class="item">
+                            <ul>
+                                <li>Implemented responsive UI with Internationalisation support using React-redux,
+                                    Material UI, and Jest.</li>
+                                <li>Delivered training sessions to upskill new hire batches for agile practices,
+                                    ways-of-working, and ThoughtWorks culture. Driven lunch & learn sessions and design
+                                    thinking
+                                    workshops for colleagues.
+                                </li>
+                            </ul>
+                        </div>
                         <h2 class="item-title">Ciena</h2>
                         <div class="item">
                             <div class="flex-row">
@@ -323,7 +342,7 @@
                 </div>
 
                 <div class="section section-languages">
-                    <h1 class="section-title">Addtional Info <i class="fas fa-passport"></i></h1>
+                    <h1 class="section-title">Additional Info <i class="fas fa-passport"></i></h1>
                     <div class="item">
                         <h2 class="item-title">Nationality: <span> - Indian</span>
                         </h2>
@@ -351,7 +370,7 @@
                 </a>
             </span>
             <span class="footer-link">
-                <a href="https://www.kaushikvikas.com" class="no-external-icon">
+                <a href="https://www.gofirstprinciples.com" class="no-external-icon">
                     <span>Website </span><i class="fas fa-globe"></i>
                 </a>
             </span>
