--- a/cover_resume_header.html
+++ b/cover_resume_header.html
@@ -24,20 +24,20 @@
             </div>
         </header>
         <div class="section section-cover-letter">
-            <!-- <div style="margin-bottom:1.5em;">
+            <div style="margin-bottom:1.5em;">
                 <b>Date:</b> 22 June 2025<br>
                 <b>To:</b> [Recipient Name]<br>
                 <b>Company:</b> [Company Name]<br>
                 <b>Address:</b> [Company Address]
-            </div> -->
-            <div style="margin-bottom:1.5em;"><b>Subject:</b> Cover Letter</div>
-            <p>Dear Recruiter,</p>
-            <p>I am excited to express my interest in the opportunity at your esteemed company. With over 11 years of professional IT experience, I have consistently delivered enterprise-grade microservices, data pipelines, and APIs in distributed, multi-cloud environments with high scalability, reliability, and availability requirements. I have set up projects from scratch, including architecture, monitoring, tests, and CI/CD, and am skilled in Golang, Kubernetes, Docker, Kafka, Prometheus, Grafana, SRE, System Design, and Data Structures.</p>
-            <p>In my current role at EPAM as a Lead Software Engineer, I have been recognized with the prestigious <b>Impact Award</b> for extraordinary contributions to technology and business. I am also an advocate for leveraging modern AI tools such as GitHub Copilot, ChatGPT, Claude, and have built and used MCP agents to accelerate development, improve quality, and drive innovation within my teams.</p>
+            </div>
+            <div style="margin-bottom:1.5em;"><b>Subject:</b> Application for [Position Title]</div>
+            <p>Dear [Recipient Name],</p>
+            <p>I am excited to express my interest in the [Position Title] at [Company Name]. With over 11 years of professional IT experience, I have consistently delivered enterprise-grade microservices, data pipelines, and APIs in distributed, multi-cloud environments with high scalability, reliability, and availability requirements. I have set up projects from scratch, including architecture, monitoring, tests, and CI/CD, and am skilled in Golang, Kubernetes, Docker, Kafka, Prometheus, Grafana, SRE, System Design, and Data Structures.</p>
+            <p>In my current role at EPAM as a Lead Software Engineer, I have been recognized with the prestigious <b>Impact Award</b> for extraordinary contributions to technology and business. I am also an advocate for leveraging modern AI tools such as GitHub Copilot, ChatGPT, Claude, and have built and used MCP agents to accelerate development, improve code quality, and drive innovation within my teams.</p>
             <p>Previously, at Walmart, I architected and implemented solutions that empowered product teams to monitor and set up alerts for their services, significantly improving MTTD and MTTR in production. At ThoughtWorks, I led projects from inception to delivery, championing agile practices and fostering a culture of inclusivity, creativity, and collaboration.</p>
             <p>I am passionate about adopting new technologies, building high-performing teams, and creating a positive impact. I look forward to learning more about this opportunity and how I can contribute to your organization’s success.</p>
             <p style="margin-top:2em;">Sincerely,<br>
-            <img src="signature.png" alt="Signature"></br>
+            <img src="signature.png" alt="Signature">
             Vikas Kaushik</p>
         </div>
     </div>
